--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sprout</title>
+	<title>Pharmacie Lellouche</title>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
-	<h1>Mystwood Publishers Ltd.</h1>
+	<h1>Pharmacie Lellouche</h1>
 	<div class="hero">
 		<h2>Sprout.</h2>
 		<p>A book by J. Daniel Bedford</p>
-		<a href="#">Read now.</a>
 	</div>
 	<p id="footer">&copy; Mystwood Publishers Limited</p>
+	<a href="mailto:pharmacielellouche@gmail.com"/> Contact Us <img src="pharma65.github.io/pill.jpg"/> </a>
 </body>
 </html>
