--- a/index.html
+++ b/index.html
@@ -2,15 +2,39 @@
 <html>
 <head>
 	<title>Pharmacie Lellouche</title>
-	<link rel="stylesheet" type="text/css" href="main.css"/>
+	  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<div class="jumbotron text-center">
 	<h1>Pharmacie Lellouche</h1>
-	<div class="hero">
-		<h2>Sprout.</h2>
-		<p>A book by J. Daniel Bedford</p>
-	</div>
-	<p id="footer">&copy; Mystwood Publishers Limited</p>
-	<a href="mailto:pharmacielellouche@gmail.com"/> Contact Us <img src="pharma65.github.io/pill.jpg"/> </a>
+	<img src="pharma65.github.io/pharma.jpg" sty
+</div>
+		<h2></h2>
+		<p></p>
+	
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3> 
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
+	<a href="mailto:pharmacielellouche@gmail.com"/> <img src="pharma65.github.io/pill.jpg" width="42" height="42"/> Contact Us  </a>
 </body>
 </html>
