--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<div class="jumbotron text-center">
 	<h1>Pharmacie Lellouche</h1>
-	<img src="pharma65.github.io/pharma.jpg" sty
-</div>
+	<img src="pharma65.github.io/pharma.jpg" />
+        </div>
 		<h2></h2>
 		<p></p>
 	
