--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#best sellers">Portfolio</a>
+                        <a href="#portfolio">Best Sellers</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Best Sellers</h2>
                     <hr class="star-primary">
                 </div>
             </div>
