--- a/index.html
+++ b/index.html
@@ -168,15 +168,14 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>Telephone: +33 1 40 60 09 40 </p>
-<p> E-mail: pharmacielellouche@gmail.com</p>
-                    <p>Adress: 65, rue des Cevennes 75015 Paris</p>
+                     <p> E-mail: pharmacielellouche@gmail.com</p>
                 </div>
-                <div class="col-lg-4">
-                    <ul>Hours:</ul>
+                <div class="col-lg-4 col-lg-offset-">
+                    <ul>Hours: </ul>
 <li>Mon: 10:00 - 20:00</li>
 <li>Tue-Fri: 09:00 - 20:00</li>
 <li>Sat: 09:00 - 13:00/ 14:30 - 19:30</li>
-</p>
+
                 </div>
             
                 </div>
