--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="Screen Shot 2016-07-09 at 7.05.03 PM.png" alt="" width: 50px height: 50px>
+                    <img class="img-responsive" src="Screen Shot 2016-07-09 at 7.05.03 PM.png" alt="" width="50px" height="50px">
                     <div class="intro-text">
                         <span class="name">Pharmacie Lellouche</span>
                         <hr class="star-light">
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/bioderma.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/bioderma.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/embryollisss.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/embryollisss.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/ialuset.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/ialuset.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/gootebleur.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/gootebleur.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/eauthemal.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/eauthemal.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -149,7 +149,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/biafine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/biafine.png" class="img-responsive" alt="" width="900px" height="650px">
                     </a>
                 </div>
             </div>
