--- a/index.html
+++ b/index.html
@@ -165,16 +165,17 @@
                     <hr class="star-light">
                 </div>
             </div>
+            <img src="pharma.jpg" width="300px" height="450px" />
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>Telephone: +33 1 40 60 09 40 </p>
                      <p> E-mail: pharmacielellouche@gmail.com</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-">
-                    <ul>Hours: </ul>
-<li>Mon: 10:00 - 20:00</li>
-<li>Tue-Fri: 09:00 - 20:00</li>
-<li>Sat: 09:00 - 13:00/ 14:30 - 19:30</li>
+                    <p>Hours: 
+<br>Mon: 10:00 - 20:00
+<br>Tue-Fri: 09:00 - 20:00
+<br>Sat: 09:00 - 13:00/ 14:30 - 19:30</p>
 
                 </div>
             
