--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <img src="pharma.jpg" width="300px" height="450px" />
+            <img src="pharma.jpg" width="800px" height="900px" align="middle"/>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>Telephone: +33 1 40 60 09 40 </p>
